--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.0",
+    "axios": "^0.27.1",
+    "axios-mock-adapter": "^1.20.0",
     "craco-less": "^2.0.0",
     "cypress": "^9.5.4",
     "react": "^18.0.0",
