--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^0.27.1",
     "axios-mock-adapter": "^1.20.0",
     "craco-less": "^2.0.0",
-    "cypress": "^9.5.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
@@ -25,7 +24,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^9.6.0"
   }
 }
